[package]
name = "djb33"
version = "0.2.0"
authors = ["Xiongfei Shi <jenson.shixf@gmail.com>"]
homepage = "https://github.com/jenson-shi/djb33-rs"
repository = "https://github.com/jenson-shi/djb33-rs.git"
license = "MIT"
readme = "README.md"
description = "DJB33 hash algorithm write in Rust."

[dependencies]
