[package]
name = "djb33"
version = "0.3.0"
authors = ["Xiongfei Shi <jenson.shixf@gmail.com>"]
homepage = "https://github.com/jenson-shi/djb33-rs"
repository = "https://github.com/jenson-shi/djb33-rs.git"
license = "MIT"
readme = "README.md"
description = "DJB33 hash algorithm write in Rust."
keywords = ["djb33", "hash", "checksum"]

[dependencies]

[[example]]
name = "djb33-example"
path = "examples/main.rs"
